--- a/scripts/data_visualization.ipynb
+++ b/scripts/data_visualization.ipynb
@@ -181,6 +181,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ca0639d",
+   "metadata": {},
+   "source": [
+    "#### Relevant metrics print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb4819a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Segmentation Metrics Summary ===\n",
+      "Number of slices analyzed: 32\n",
+      "Dice coefficient: mean = 0.4961, std = 0.1703\n",
+      "Average overlapping voxels per slice: 20.8\n",
+      "T1 values inside overlap: mean = 0.99 ms, std = 0.13 ms\n",
+      "FA values inside overlap: mean = 0.5886, std = 0.1408\n",
+      "Mean MTVF: 0.2736\n",
+      "Mean MVF: 0.1368\n",
+      "Mean FVF: 0.3486\n",
+      "Mean g-ratio: 0.7329\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=== Segmentation Metrics Summary ===\")\n",
+    "print(f\"Number of slices analyzed: {len(df_filtered)}\")\n",
+    "\n",
+    "mean_dice = df_filtered[\"dice\"].mean()\n",
+    "std_dice = df_filtered[\"dice\"].std()\n",
+    "print(f\"Dice coefficient: mean = {mean_dice:.4f}, std = {std_dice:.4f}\")\n",
+    "\n",
+    "mean_overlap = df_filtered[\"overlap\"].mean()\n",
+    "print(f\"Average overlapping voxels per slice: {mean_overlap:.1f}\")\n",
+    "\n",
+    "mean_t1 = df_filtered[\"mean_t1\"].mean()\n",
+    "std_t1 = df_filtered[\"mean_t1\"].std()\n",
+    "print(f\"T1 values inside overlap: mean = {mean_t1:.2f} ms, std = {std_t1:.2f} ms\")\n",
+    "\n",
+    "mean_fa = df_filtered[\"mean_fa\"].mean()\n",
+    "std_fa = df_filtered[\"mean_fa\"].std()\n",
+    "print(f\"FA values inside overlap: mean = {mean_fa:.4f}, std = {std_fa:.4f}\")\n",
+    "\n",
+    "if \"MTVF\" in df_filtered.columns:\n",
+    "    mean_mtvf = df_filtered[\"MTVF\"].mean()\n",
+    "    print(f\"Mean MTVF: {mean_mtvf:.4f}\")\n",
+    "\n",
+    "if \"MVF\" in df_filtered.columns:\n",
+    "    mean_mvf = df_filtered[\"MVF\"].mean()\n",
+    "    print(f\"Mean MVF: {mean_mvf:.4f}\")\n",
+    "\n",
+    "if \"FVF\" in df_filtered.columns:\n",
+    "    mean_fvf = df_filtered[\"FVF\"].mean()\n",
+    "    print(f\"Mean FVF: {mean_fvf:.4f}\")\n",
+    "\n",
+    "if \"g_ratio\" in df_filtered.columns:\n",
+    "    mean_g = df_filtered[\"g_ratio\"].mean()\n",
+    "    print(f\"Mean g-ratio: {mean_g:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2b17cab1",
    "metadata": {},
    "source": [
