Updated data_visualization and README.md

--- a/scripts/data_visualization.ipynb
+++ b/scripts/data_visualization.ipynb
@@ -5,7 +5,7 @@
    "id": "d81f6fec",
    "metadata": {},
    "source": [
-    "#### Load Results Files\n",
+    "#### 1. Load Results Files\n",
     "Change \"PROJECT_ROOT\" and \"SUBJECT\" accordingly "
    ]
   },
@@ -50,7 +50,7 @@
    "id": "6f2c0410",
    "metadata": {},
    "source": [
-    "#### Extract differents metrics from segmentation masks"
+    "#### 2. Extract differents metrics from segmentation masks"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "id": "db5d1325",
    "metadata": {},
    "source": [
-    "#### Compute MVF, FVF, and g-ratio"
+    "#### 3. Compute MVF, FVF, and g-ratio"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "1ca0639d",
    "metadata": {},
    "source": [
-    "#### Relevant metrics print"
+    "#### 4. Relevant metrics print"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\n",
     "mean_t1 = df_filtered[\"mean_t1\"].mean()\n",
     "std_t1 = df_filtered[\"mean_t1\"].std()\n",
-    "print(f\"T1 values inside overlap: mean = {mean_t1:.2f} ms, std = {std_t1:.2f} ms\")\n",
+    "print(f\"T1 values inside overlap: mean = {mean_t1:.2f} s, std = {std_t1:.2f} s\")\n",
     "\n",
     "mean_fa = df_filtered[\"mean_fa\"].mean()\n",
     "std_fa = df_filtered[\"mean_fa\"].std()\n",
