Updated Registration.ipynb with step numbers

--- a/scripts/registration.ipynb
+++ b/scripts/registration.ipynb
@@ -75,7 +75,7 @@
     "export CORRECTED_FA=\"\\${WORKDIR}/fa2mni_corrected.nii.gz\"\n",
     "\n",
     "# =============================\n",
-    "# Results outputs (generated)\n",
+    "# Standardize space (MNI152) results outputs (generated)\n",
     "# =============================\n",
     "\n",
     "export MP2RAGE_MNI=\"\\${RESULTSDIR}/mp2rage_mni.nii.gz\"\n",
@@ -104,7 +104,7 @@
    "id": "85f1f25f",
    "metadata": {},
    "source": [
-    "**Diffusion b0 image to MP2RAGE (Rigid Registration)**\n",
+    "#### **1. Diffusion b0 image to MP2RAGE (Rigid Registration)**\n",
     "\n",
     "Because DWI are normally slabs rather than full brain image, the next registration may not always work reliably. Visually check the output, and if it's offset, rerun the registration."
    ]
@@ -133,7 +133,7 @@
    "id": "691c7983",
    "metadata": {},
    "source": [
-    "**MP2RAGE to MNI 152 (Affine Registration)**"
+    "#### **2. MP2RAGE to MNI 152 (Affine Registration)**"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "id": "221dbcbb",
    "metadata": {},
    "source": [
-    "**Diffusion and MP2RAGE derivatives to MNI 152**"
+    "#### **3. Diffusion and MP2RAGE derivatives to MNI 152**"
    ]
   },
   {
@@ -201,6 +201,23 @@
     "  -n NearestNeighbor \\\n",
     "  -t \"${MP2RAGE_TO_MNI}0GenericAffine.mat\" \n",
     "\n",
+    "# DWI FA to MP2RAGE (via DWI to MP2RAGE)\n",
+    "antsApplyTransforms \\\n",
+    "  -d 3 \\\n",
+    "  -i \"$FA_MAP\" \\\n",
+    "  -r \"$MP2RAGE\" \\\n",
+    "  -o \"$FA_TO_MP2RAGE\" \\\n",
+    "  -n NearestNeighbor \\\n",
+    "  -t \"${DWI_TO_MP2RAGE}0GenericAffine.mat\"\n",
+    "\n",
+    "# DWI FA to MNI (via MP2RAGE to MNI)\n",
+    "antsApplyTransforms \\\n",
+    "  -d 3 \\\n",
+    "  -i \"$FA_TO_MP2RAGE\" \\\n",
+    "  -r \"$MNI\" \\\n",
+    "  -o \"$FA_TO_MNI\" \\\n",
+    "  -n NearestNeighbor \\\n",
+    "  -t \"${MP2RAGE_TO_MNI}0GenericAffine.mat\" \n",
     "\n",
     "# MP2RAGE Segmentation to MNI (via MP2RAGE to MNI)\n",
     "antsApplyTransforms \\\n",
@@ -218,25 +235,7 @@
     "  -r \"$MNI\" \\\n",
     "  -o \"$T1_MAP_TO_MNI\" \\\n",
     "  -n NearestNeighbor \\\n",
-    "  -t \"${MP2RAGE_TO_MNI}0GenericAffine.mat\"\n",
-    "\n",
-    "# DWI FA to MP2RAGE (via DWI to MP2RAGE)\n",
-    "antsApplyTransforms \\\n",
-    "  -d 3 \\\n",
-    "  -i \"$FA_MAP\" \\\n",
-    "  -r \"$MP2RAGE\" \\\n",
-    "  -o \"$FA_TO_MP2RAGE\" \\\n",
-    "  -n NearestNeighbor \\\n",
-    "  -t \"${DWI_TO_MP2RAGE}0GenericAffine.mat\"\n",
-    "\n",
-    "# DWI FA to MNI (via MP2RAGE to MNI)\n",
-    "antsApplyTransforms \\\n",
-    "  -d 3 \\\n",
-    "  -i \"$FA_TO_MP2RAGE\" \\\n",
-    "  -r \"$MNI\" \\\n",
-    "  -o \"$FA_TO_MNI\" \\\n",
-    "  -n NearestNeighbor \\\n",
-    "  -t \"${MP2RAGE_TO_MNI}0GenericAffine.mat\" "
+    "  -t \"${MP2RAGE_TO_MNI}0GenericAffine.mat\""
    ]
   },
   {
@@ -244,7 +243,7 @@
    "id": "dd0e238f",
    "metadata": {},
    "source": [
-    "**ROI creation using MNI 152 standardized coordinates**"
+    "#### **4. ROI creation using MNI 152 standardized coordinates**"
    ]
   },
   {
@@ -265,7 +264,7 @@
    "id": "026abae8",
    "metadata": {},
    "source": [
-    "**Diffusion to MP2RAGE (ROI Rigid Registration)**"
+    "#### **5. Diffusion to MP2RAGE (ROI Rigid Registration)**"
    ]
   },
   {
@@ -292,7 +291,7 @@
    "id": "e1fd4551",
    "metadata": {},
    "source": [
-    "**Diffusion derivatives to MP2RAGE (via ROI)**"
+    "#### **6. Diffusion derivatives to MP2RAGE (via ROI)**"
    ]
   },
   {
@@ -306,7 +305,7 @@
     "source env.sh\n",
     "export PATH=$HOME/ants/bin:$PATH\n",
     "\n",
-    "# Corrected DWI to MNI (via ROI DWI to ROI MP2RAGE Matrice)\n",
+    "# Corrected DWI to MP2RAGE (via ROI DWI to ROI MP2RAGE Matrice)\n",
     "antsApplyTransforms \\\n",
     "  -d 3 \\\n",
     "  -i \"$DWI_MNI\" \\\n",
@@ -332,6 +331,55 @@
     "  -o \"$CORRECTED_FA\" \\\n",
     "  -n NearestNeighbor \\\n",
     "  -t \"${WORKDIR}/roi2roi_0GenericAffine.mat\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e07b191",
+   "metadata": {},
+   "source": [
+    "#### **7. Creating results files**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abf56703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source env.sh\n",
+    "\n",
+    "# Create standardize space (MNI152) results files\n",
+    "cp \"${MP2RAGE_TO_MNI}Warped.nii.gz\" \"$MP2RAGE_MNI\"\n",
+    "cp \"$SEG_MP2RAGE_TO_MNI\" \"$SEG_MP2RAGE_MNI\"\n",
+    "cp \"$CORRECTED_DWI\" \"$DWI_MNI\"\n",
+    "cp \"$FINAL_SEG_DWI\" \"$SEG_DWI_MNI\"\n",
+    "cp \"$T1_MAP_TO_MNI\" \"$T1_MAP_MNI\"\n",
+    "cp \"$CORRECTED_FA\" \"$FA_MAP_MNI\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a88f0be0",
+   "metadata": {},
+   "source": [
+    "#### **8. Delete temporary working directory**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33634b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "source env.sh\n",
+    "\n",
+    "# Delete temporary working directory\n",
+    "rm \"$WORKDIR$"
    ]
   }
  ],
