--- a/scripts/data_visualization.ipynb
+++ b/scripts/data_visualization.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f464f78e",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "PROJECT_ROOT = \"C:/Users/hapla/Documents/GitHub/albert-plante_project\"\n",
-    "SUBJECT = \"0457\"\n",
+    "PROJECT_ROOT = \"\"\n",
+    "SUBJECT = \"XXX\"\n",
     "\n",
     "RESULTSDIR = f\"{PROJECT_ROOT}/results/results_{SUBJECT}\"\n",
     "TEMPLATE_DIR = f\"{PROJECT_ROOT}/data/derivatives/templates\"\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "4cca38d3",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "399199c4",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8fb4819a",
    "metadata": {},
    "outputs": [
@@ -201,12 +201,12 @@
       "Number of slices analyzed: 32\n",
       "Dice coefficient: mean = 0.4961, std = 0.1703\n",
       "Average overlapping voxels per slice: 20.8\n",
-      "T1 values inside overlap: mean = 0.99 ms, std = 0.13 ms\n",
+      "T1 values inside overlap: mean = 0.99 s, std = 0.13 s\n",
       "FA values inside overlap: mean = 0.5886, std = 0.1408\n",
-      "Mean MTVF: 0.2736\n",
-      "Mean MVF: 0.1368\n",
-      "Mean FVF: 0.3486\n",
-      "Mean g-ratio: 0.7329\n"
+      "Mean MTVF: 0.2736, std = 0.0278\n",
+      "Mean MVF: 0.1368, std = 0.0139\n",
+      "Mean FVF: 0.3486, std = 0.1594\n",
+      "Mean g-ratio: 0.7329, std = 0.1019\n"
      ]
     }
    ],
@@ -231,19 +231,24 @@
     "\n",
     "if \"MTVF\" in df_filtered.columns:\n",
     "    mean_mtvf = df_filtered[\"MTVF\"].mean()\n",
-    "    print(f\"Mean MTVF: {mean_mtvf:.4f}\")\n",
+    "    std_mtvf = df_filtered[\"MTVF\"].std()\n",
+    "    print(f\"Mean MTVF: {mean_mtvf:.4f}, std = {std_mtvf:.4f}\")\n",
     "\n",
     "if \"MVF\" in df_filtered.columns:\n",
     "    mean_mvf = df_filtered[\"MVF\"].mean()\n",
-    "    print(f\"Mean MVF: {mean_mvf:.4f}\")\n",
+    "    std_mvf = df_filtered[\"MVF\"].std()\n",
+    "    print(f\"Mean MVF: {mean_mvf:.4f}, std = {std_mvf:.4f}\")\n",
     "\n",
     "if \"FVF\" in df_filtered.columns:\n",
     "    mean_fvf = df_filtered[\"FVF\"].mean()\n",
-    "    print(f\"Mean FVF: {mean_fvf:.4f}\")\n",
+    "    std_fvf = df_filtered[\"FVF\"].std()\n",
+    "    print(f\"Mean FVF: {mean_fvf:.4f}, std = {std_fvf:.4f}\")\n",
     "\n",
     "if \"g_ratio\" in df_filtered.columns:\n",
     "    mean_g = df_filtered[\"g_ratio\"].mean()\n",
-    "    print(f\"Mean g-ratio: {mean_g:.4f}\")\n",
+    "    std_g = df_filtered[\"g_ratio\"].std()\n",
+    "    print(f\"Mean g-ratio: {mean_g:.4f}, std = {std_g:.4f}\")\n",
+    "\n",
     "\n"
    ]
   },
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "fde4d637",
    "metadata": {},
    "outputs": [
