--- a/scripts/registration.ipynb
+++ b/scripts/registration.ipynb
@@ -21,9 +21,9 @@
     "# BIDS environment setup\n",
     "# =============================\n",
     "\n",
-    "export PROJECT_ROOT=\"/mnt/c/Users/hapla/Documents/GitHub/albert-plante_project\"\n",
+    "export PROJECT_ROOT=\"\"\n",
     "export BIDS_ROOT=\"\\${PROJECT_ROOT}/data\"\n",
-    "export SUBJECT=\"0204\"\n",
+    "export SUBJECT=\"XXX\"\n",
     "\n",
     "# =============================\n",
     "# Derived and temp directories\n",
